- update swagger - add migration - add updating user - add auth with jwt  + paseto
